--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,13 @@ dependencies:
   get_it: ^7.7.0
   google_generative_ai: ^0.2.3
   google_sign_in: ^6.2.1
+  hive_flutter: ^1.1.0
   http: ^1.2.1
   image_picker: ^1.1.0
   intl: ^0.19.0
+  logger: ^2.2.0
   path: ^1.9.0
+  path_provider: ^2.1.3
   shimmer: ^3.0.0
   stacked: ^3.4.2
   stacked_services: ^1.5.0
