--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,3 +39,20 @@ flutter:
   assets:
     - assets/images/
     - assets/svgs/
+  fonts:
+    - family: Manrope
+      fonts:
+        - asset: fonts/Manrope-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Manrope-Bold.ttf
+          weight: 700
+        - asset: fonts/Manrope-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Manrope-Medium.ttf
+          weight: 500
+        - asset: fonts/Manrope-Regular.ttf
+          weight: 400
+        - asset: fonts/Manrope-Light.ttf
+          weight: 300
+        - asset: fonts/Manrope-ExraLight.ttf
+          weight: 200
