--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,5 +54,5 @@ flutter:
           weight: 400
         - asset: fonts/Manrope-Light.ttf
           weight: 300
-        - asset: fonts/Manrope-ExraLight.ttf
+        - asset: fonts/Manrope-ExtraLight.ttf
           weight: 200
