--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cloud_firestore: ^4.17.0
   collection: ^1.18.0
   cupertino_icons: ^1.0.6
+  dotted_border: ^2.1.0
   file_picker: ^8.0.3
   firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
