--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shimmer: ^3.0.0
   stacked: ^3.4.2
   stacked_services: ^1.5.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
