--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   collection: ^1.18.0
   cupertino_icons: ^1.0.6
   dotted_border: ^2.1.0
+  dio: ^5.4.3+1
   equatable: ^2.0.5
   file_picker: ^8.0.3
   firebase_auth: ^4.19.1
