--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   cloud_firestore: ^4.17.0
   collection: ^1.18.0
   cupertino_icons: ^1.0.6
-  dotted_border: ^2.1.0
   dio: ^5.4.3+1
+  dotted_border: ^2.1.0
   equatable: ^2.0.5
   file_picker: ^8.0.3
   firebase_auth: ^4.19.1
@@ -25,6 +25,7 @@ dependencies:
   get_it: ^7.7.0
   google_generative_ai: ^0.2.3
   google_sign_in: ^6.2.1
+  googleapis_auth: ^1.6.0
   hive_flutter: ^1.1.0
   http: ^1.2.1
   image_picker: ^1.1.0
