--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   get_it: ^7.7.0
   google_generative_ai: ^0.2.3
   google_sign_in: ^6.2.1
+  googleapis: ^13.1.0
   googleapis_auth: ^1.6.0
   hive_flutter: ^1.1.0
   http: ^1.2.1
