--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_storage: ^11.7.1
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.5
   flutter_svg: ^2.0.10+1
   get_it: ^7.7.0
   google_generative_ai: ^0.2.3
